run_verify.log
Dash is running on http://127.0.0.1:8050/app/

INFO:dash.dash:Dash is running on http://127.0.0.1:8050/app/

 * Serving Flask app 'app'
 * Debug mode: on
Traceback (most recent call last):
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\app.py", line 261, in <module>
    app = create_app()
          ^^^^^^^^^^^^
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\app.py", line 222, in create_app
    viz.build(_build_dashboard())
              ^^^^^^^^^^^^^^^^^^
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\app.py", line 148, in _build_dashboard
    dashboard_pages = entry.build_pages(ctx)
                      ^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\dashboards\amazon_2026\__init__.py", line 248, in build_pages
    from dashboards.amazon_2026.pages import build_all_pages
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\dashboards\amazon_2026\pages\__init__.py", line 14, in <module>
    from dashboards.amazon_2026.pages.discover import build_discover_page
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\dashboards\amazon_2026\pages\discover.py", line 13, in <module>
    from dashboards.amazon_2026.charts_discover import (
  File "C:\Świetlik\NATIVE ANALYTICS\Vizro\dashboards\amazon_2026\charts_discover.py", line 344
    “No reference article selected.”,
    ^
SyntaxError: invalid character '“' (U+201C)
